use anyhow::{Context, Result};
use blog_client::{BlogClient, Transport};
use clap::{Parser, Subcommand};
use std::fs;
use std::path::PathBuf;

/// Blog CLI - –∏–Ω—Ç–µ—Ä—Ñ–µ–π—Å –∫–æ–º–∞–Ω–¥–Ω–æ–π —Å—Ç—Ä–æ–∫–∏ –¥–ª—è —É–ø—Ä–∞–≤–ª–µ–Ω–∏—è –±–ª–æ–≥–æ–º
#[derive(Parser)]
#[command(author, version, about, long_about = None)]
struct Cli {
    /// –ê–¥—Ä–µ—Å —Å–µ—Ä–≤–µ—Ä–∞ (–ø–æ —É–º–æ–ª—á–∞–Ω–∏—é: http://localhost:3000 –¥–ª—è HTTP, http://localhost:50051 –¥–ª—è gRPC)
    #[arg(short, long)]
    server: Option<String>,

    /// –ò—Å–ø–æ–ª—å–∑–æ–≤–∞—Ç—å gRPC –≤–º–µ—Å—Ç–æ HTTP
    #[arg(long)]
    grpc: bool,

    /// –ü—É—Ç—å –∫ —Ñ–∞–π–ª—É —Å —Ç–æ–∫–µ–Ω–æ–º (–ø–æ —É–º–æ–ª—á–∞–Ω–∏—é: .blog_token –≤ –¥–æ–º–∞—à–Ω–µ–π –¥–∏—Ä–µ–∫—Ç–æ—Ä–∏–∏)
    #[arg(long)]
    token_file: Option<PathBuf>,

    #[command(subcommand)]
    command: Commands,
}

#[derive(Subcommand)]
enum Commands {
    /// –†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è –Ω–æ–≤–æ–≥–æ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
    Register {
        /// –ò–º—è –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
        #[arg(short, long)]
        username: String,

        /// Email –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
        #[arg(short, long)]
        email: String,

        /// –ü–∞—Ä–æ–ª—å
        #[arg(short, long)]
        password: String,

        /// –ü–æ–ª–Ω–æ–µ –∏–º—è (–æ–ø—Ü–∏–æ–Ω–∞–ª—å–Ω–æ)
        #[arg(short, long)]
        full_name: Option<String>,
    },

    /// –í—Ö–æ–¥ –≤ —Å–∏—Å—Ç–µ–º—É
    Login {
        /// –ò–º—è –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
        #[arg(short, long)]
        username: String,

        /// –ü–∞—Ä–æ–ª—å
        #[arg(short, long)]
        password: String,
    },

    /// –ü–æ–∫–∞–∑–∞—Ç—å –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ —Ç–µ–∫—É—â–µ–º —Ç–æ–∫–µ–Ω–µ
    Status,

    /// –°–æ–∑–¥–∞–Ω–∏–µ –Ω–æ–≤–æ–≥–æ –ø–æ—Å—Ç–∞
    Create {
        /// –ó–∞–≥–æ–ª–æ–≤–æ–∫ –ø–æ—Å—Ç–∞
        #[arg(short, long)]
        title: String,

        /// –°–æ–¥–µ—Ä–∂–∞–Ω–∏–µ –ø–æ—Å—Ç–∞
        #[arg(short, long)]
        content: String,
    },

    /// –ü–æ–ª—É—á–µ–Ω–∏–µ –ø–æ—Å—Ç–∞ –ø–æ ID
    Get {
        /// ID –ø–æ—Å—Ç–∞
        #[arg(short, long)]
        id: i64,
    },

    /// –û–±–Ω–æ–≤–ª–µ–Ω–∏–µ –ø–æ—Å—Ç–∞
    Update {
        /// ID –ø–æ—Å—Ç–∞
        #[arg(short, long)]
        id: i64,

        /// –ù–æ–≤—ã–π –∑–∞–≥–æ–ª–æ–≤–æ–∫ (–æ–ø—Ü–∏–æ–Ω–∞–ª—å–Ω–æ)
        #[arg(short, long)]
        title: Option<String>,

        /// –ù–æ–≤–æ–µ —Å–æ–¥–µ—Ä–∂–∞–Ω–∏–µ (–æ–ø—Ü–∏–æ–Ω–∞–ª—å–Ω–æ)
        #[arg(short, long)]
        content: Option<String>,
    },

    /// –£–¥–∞–ª–µ–Ω–∏–µ –ø–æ—Å—Ç–∞
    Delete {
        /// ID –ø–æ—Å—Ç–∞
        #[arg(short, long)]
        id: i64,
    },

    /// –°–ø–∏—Å–æ–∫ –ø–æ—Å—Ç–æ–≤ —Å –ø–∞–≥–∏–Ω–∞—Ü–∏–µ–π
    List {
        /// –ö–æ–ª–∏—á–µ—Å—Ç–≤–æ –ø–æ—Å—Ç–æ–≤ –Ω–∞ —Å—Ç—Ä–∞–Ω–∏—Ü–µ (–ø–æ —É–º–æ–ª—á–∞–Ω–∏—é: 10)
        #[arg(short, long, default_value_t = 10)]
        limit: i64,

        /// –°–º–µ—â–µ–Ω–∏–µ –æ—Ç –Ω–∞—á–∞–ª–∞ (–ø–æ —É–º–æ–ª—á–∞–Ω–∏—é: 0)
        #[arg(short, long, default_value_t = 0)]
        offset: i64,
    },
}

struct TokenManager {
    token_path: PathBuf,
}

impl TokenManager {
    fn new(custom_path: Option<PathBuf>) -> Result<Self> {
        let token_path = match custom_path {
            Some(path) => path,
            None => {
                let home = dirs::home_dir().context("Failed to get home directory")?;
                home.join(".blog_token")
            }
        };

        Ok(Self { token_path })
    }

    fn save_token(&self, token: &str) -> Result<()> {
        fs::write(&self.token_path, token)
            .with_context(|| format!("Failed to save token to {:?}", self.token_path))?;

        // –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –ø—Ä–∞–≤–∞ —Ç–æ–ª—å–∫–æ –¥–ª—è –≤–ª–∞–¥–µ–ª—å—Ü–∞ –Ω–∞ Unix —Å–∏—Å—Ç–µ–º–∞—Ö
        #[cfg(unix)]
        {
            use std::os::unix::fs::PermissionsExt;
            let mut perms = fs::metadata(&self.token_path)?.permissions();
            perms.set_mode(0o600);
            fs::set_permissions(&self.token_path, perms)?;
        }

        println!("‚úì Token saved to {:?}", self.token_path);
        Ok(())
    }

    fn load_token(&self) -> Result<Option<String>> {
        match fs::read_to_string(&self.token_path) {
            Ok(token) => {
                let token = token.trim().to_string();
                if !token.is_empty() {
                    println!("‚úì Token loaded from {:?}", self.token_path);
                    Ok(Some(token))
                } else {
                    Ok(None)
                }
            }
            Err(e) if e.kind() == std::io::ErrorKind::NotFound => Ok(None),
            Err(e) => Err(e).context("Failed to read token file"),
        }
    }

    #[allow(dead_code)]
    fn clear_token(&self) -> Result<()> {
        if self.token_path.exists() {
            fs::remove_file(&self.token_path)
                .with_context(|| format!("Failed to remove token file {:?}", self.token_path))?;
            println!("‚úì Token file removed");
        }
        Ok(())
    }
}

#[tokio::main]
async fn main() -> Result<()> {
    let cli = Cli::parse();

    // –û–ø—Ä–µ–¥–µ–ª—è–µ–º —Ç—Ä–∞–Ω—Å–ø–æ—Ä—Ç
    let transport = if cli.grpc {
        let addr = cli
            .server
            .unwrap_or_else(|| "http://localhost:50051".to_string());
        Transport::Grpc(addr)
    } else {
        let addr = cli
            .server
            .unwrap_or_else(|| "http://localhost:3000".to_string());
        Transport::Http(addr)
    };

    println!("üîå Connecting to: {}", transport_url(&transport));

    // –°–æ–∑–¥–∞–µ–º –∫–ª–∏–µ–Ω—Ç
    let client = BlogClient::new(transport)
        .await
        .context("Failed to create blog client")?;

    // –ó–∞–≥—Ä—É–∂–∞–µ–º —Ç–æ–∫–µ–Ω
    let token_manager = TokenManager::new(cli.token_file)?;
    if let Some(token) = token_manager.load_token()? {
        client.set_token(token).await;
        println!("üîë Authenticated with saved token");
    }

    // –í—ã–ø–æ–ª–Ω—è–µ–º –∫–æ–º–∞–Ω–¥—É
    match &cli.command {
        Commands::Register {
            username,
            email,
            password,
            full_name,
        } => {
            let full_name = full_name.clone().unwrap_or_else(|| username.clone());
            println!("üìù Registering user: {}", username);

            match client.register(username, email, password, full_name).await {
                Ok(response) => {
                    println!("‚úÖ Registration successful!");
                    println!("   User ID: {}", response.user.id);
                    println!("   Username: {}", response.user.username);
                    println!("   Email: {}", response.user.email);

                    token_manager.save_token(&response.token)?;
                }
                Err(e) => {
                    println!("‚ùå Registration failed: {}", e);
                    std::process::exit(1);
                }
            }
        }

        Commands::Login { username, password } => {
            println!("üîë Logging in as: {}", username);

            match client.login(username, password).await {
                Ok(response) => {
                    println!("‚úÖ Login successful!");
                    println!("   User ID: {}", response.user.id);
                    println!("   Username: {}", response.user.username);
                    println!("   Email: {}", response.user.email);

                    token_manager.save_token(&response.token)?;
                }
                Err(e) => {
                    println!("‚ùå Login failed: {}", e);
                    std::process::exit(1);
                }
            }
        }

        Commands::Status => match token_manager.load_token()? {
            Some(token) => {
                println!("üîë Token file: {:?}", token_manager.token_path);
                println!("   Token: {}...", &token[..20]);
                println!("   Length: {} characters", token.len());
                println!("   Status: ‚úÖ Active");
                println!("\n   To verify token, try: cargo run -- list");
            }
            None => {
                println!("‚ùå No token found");
                println!("   Please login first: cargo run -- login --username <username> --password <password>");
            }
        },

        Commands::Create { title, content } => {
            println!("üìù Creating new post...");

            match client.create_post(title, content).await {
                Ok(post) => {
                    println!("‚úÖ Post created successfully!");
                    println!("   ID: {}", post.id);
                    println!("   Title: {}", post.title);
                    println!("   Author ID: {}", post.author_id);
                    println!("   Created: {}", post.created_at);
                }
                Err(e) => {
                    if e.is_unauthorized() {
                        println!("‚ùå Unauthorized. Please login first:");
                        println!(
                            "   cargo run -- login --username <username> --password <password>"
                        );
                    } else {
                        println!("‚ùå Failed to create post: {}", e);
                    }
                    std::process::exit(1);
                }
            }
        }

        Commands::Get { id } => {
            println!("üîç Getting post #{}", id);

            match client.get_post(*id).await {
                Ok(post) => {
                    println!("‚úÖ Post retrieved:");
                    println!("   ID: {}", post.id);
                    println!("   Title: {}", post.title);
                    println!("   Content: {}", post.content);
                    println!("   Author ID: {}", post.author_id);
                    println!("   Created: {}", post.created_at);
                    println!("   Updated: {}", post.updated_at);
                }
                Err(e) => {
                    if e.is_not_found() {
                        println!("‚ùå Post #{} not found", id);
                        println!("   Tip: Use 'list' command to see available posts");
                    } else {
                        println!("‚ùå Error: {}", e);
                    }
                    std::process::exit(1);
                }
            }
        }

        Commands::Update { id, title, content } => {
            println!("‚úèÔ∏è Updating post #{}", id);

            match client
                .update_post(*id, title.clone(), content.clone())
                .await
            {
                Ok(post) => {
                    println!("‚úÖ Post updated successfully!");
                    println!("   ID: {}", post.id);
                    println!("   Title: {}", post.title);
                    println!("   Content: {}", post.content);
                    println!("   Author ID: {}", post.author_id);
                    println!("   Updated: {}", post.updated_at);
                }
                Err(e) => {
                    if e.is_not_found() {
                        println!("‚ùå Post #{} not found", id);
                    } else if e.is_unauthorized() {
                        println!(
                            "‚ùå Unauthorized. You may not own this post or need to login again"
                        );
                    } else {
                        println!("‚ùå Failed to update post: {}", e);
                    }
                    std::process::exit(1);
                }
            }
        }

        Commands::Delete { id } => {
            println!("üóëÔ∏è Deleting post #{}", id);

            match client.delete_post(*id).await {
                Ok(()) => {
                    println!("‚úÖ Post deleted successfully!");
                }
                Err(e) => {
                    if e.is_not_found() {
                        println!("‚ùå Post #{} not found", id);
                    } else if e.is_unauthorized() {
                        println!(
                            "‚ùå Unauthorized. You may not own this post or need to login again"
                        );
                    } else {
                        println!("‚ùå Failed to delete post: {}", e);
                    }
                    std::process::exit(1);
                }
            }
        }

        Commands::List { limit, offset } => {
            println!("üìã Listing posts (limit={}, offset={})", limit, offset);

            match client.list_posts(Some(*limit), Some(*offset)).await {
                Ok(response) => {
                    println!(
                        "‚úÖ Found {} posts (total: {})",
                        response.posts.len(),
                        response.total
                    );
                    println!();

                    if response.posts.is_empty() {
                        println!("   No posts found");
                        println!("   Tip: Create your first post: cargo run -- create --title \"My Post\" --content \"Hello\"");
                    } else {
                        for (i, post) in response.posts.iter().enumerate() {
                            println!("   {}. [{}] {}", i + 1, post.id, post.title);
                            println!("      Created: {}", post.created_at);
                            println!("      Content: {}", truncate(&post.content, 50));
                            println!();
                        }
                    }
                }
                Err(e) => {
                    println!("‚ùå Failed to list posts: {}", e);
                    std::process::exit(1);
                }
            }
        }
    }

    Ok(())
}

fn transport_url(transport: &Transport) -> String {
    match transport {
        Transport::Http(url) => format!("HTTP: {}", url),
        Transport::Grpc(addr) => format!("gRPC: {}", addr),
    }
}

fn truncate(s: &str, max_len: usize) -> String {
    if s.len() <= max_len {
        s.to_string()
    } else {
        format!("{}...", &s[..max_len])
    }
}
