use blog_client::{BlogClient, Transport};
use std::time::Duration;
use tokio::time::sleep;

#[tokio::main]
async fn main() -> Result<(), Box<dyn std::error::Error>> {
    println!("üöÄ –¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ gRPC –∫–ª–∏–µ–Ω—Ç–∞");
    println!("============================\n");

    // –°–æ–∑–¥–∞–µ–º –∫–ª–∏–µ–Ω—Ç —Å gRPC —Ç—Ä–∞–Ω—Å–ø–æ—Ä—Ç–æ–º
    println!("üì° –°–æ–∑–¥–∞–Ω–∏–µ gRPC –∫–ª–∏–µ–Ω—Ç–∞...");
    let client = BlogClient::new(Transport::Grpc("http://localhost:50051".to_string())).await?;
    println!("‚úÖ –ö–ª–∏–µ–Ω—Ç —Å–æ–∑–¥–∞–Ω\n");

    // –ì–µ–Ω–µ—Ä–∏—Ä—É–µ–º —É–Ω–∏–∫–∞–ª—å–Ω—ã–µ –∏–º–µ–Ω–∞ –¥–ª—è —Ç–µ—Å—Ç–æ–≤
    let timestamp = std::time::SystemTime::now()
        .duration_since(std::time::UNIX_EPOCH)
        .unwrap()
        .as_secs();

    let username = format!("grpc_user_{}", timestamp);
    let email = format!("grpc_{}@example.com", timestamp);
    let password = "testpassword123";

    // –¢–µ—Å—Ç 1: –†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è
    println!("üìù –¢–µ—Å—Ç 1: –†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è");
    println!("   Username: {}", username);
    println!("   Email: {}", email);

    match client
        .register(
            username.clone(),
            email.clone(),
            password.to_string(),
            // "Test User".to_string(),
        )
        .await
    {
        Ok(response) => {
            println!("   ‚úÖ –†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è —É—Å–ø–µ—à–Ω–∞!");
            println!("   üìä User ID: {}", response.user.id);
            println!("   üë§ Username: {}", response.user.username);
            println!("   üìß Email: {}", response.user.email);
            println!(
                "   üîê –¢–æ–∫–µ–Ω –ø—Ä–∏ —Ä–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏–∏: {}",
                if response.token.is_empty() {
                    "‚ùå –ù–ï –ü–û–õ–£–ß–ï–ù (–æ—à–∏–±–∫–∞!)"
                } else {
                    "‚úÖ –ø–æ–ª—É—á–µ–Ω"
                }
            );
            if response.token.is_empty() {
                println!("   ‚ùå –û–®–ò–ë–ö–ê: gRPC —Ä–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è –¥–æ–ª–∂–Ω–∞ –≤–æ–∑–≤—Ä–∞—â–∞—Ç—å —Ç–æ–∫–µ–Ω!");
            }
        }
        Err(e) => println!("   ‚ùå –û—à–∏–±–∫–∞ —Ä–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏–∏: {}", e),
    }
    println!("");

    // –¢–µ—Å—Ç 2: –õ–æ–≥–∏–Ω
    println!("üîë –¢–µ—Å—Ç 2: –õ–æ–≥–∏–Ω –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è");
    match client.login(username.clone(), password.to_string()).await {
        Ok(response) => {
            println!("   ‚úÖ –õ–æ–≥–∏–Ω —É—Å–ø–µ—à–µ–Ω!");
            println!("   üìä User ID: {}", response.user.id);
            println!("   üë§ Username: {}", response.user.username);
            println!("   üìß Email: {}", response.user.email);
            println!("   üîê –¢–æ–∫–µ–Ω –ø–æ–ª—É—á–µ–Ω: {}...", &response.token[..20]);

            // –°–æ—Ö—Ä–∞–Ω—è–µ–º —Ç–æ–∫–µ–Ω –¥–ª—è —Å–ª–µ–¥—É—é—â–∏—Ö —Ç–µ—Å—Ç–æ–≤
            client.set_token(response.token.clone()).await;
            println!("   üíæ –¢–æ–∫–µ–Ω —Å–æ—Ö—Ä–∞–Ω–µ–Ω\n");
        }
        Err(e) => {
            println!("   ‚ùå –û—à–∏–±–∫–∞ –ª–æ–≥–∏–Ω–∞: {}", e);
            return Ok(());
        }
    }

    // –ù–µ–±–æ–ª—å—à–∞—è –ø–∞—É–∑–∞
    sleep(Duration::from_millis(500)).await;

    // –¢–µ—Å—Ç 3: –°–æ–∑–¥–∞–Ω–∏–µ –ø–æ—Å—Ç–∞
    println!("üìù –¢–µ—Å—Ç 3: –°–æ–∑–¥–∞–Ω–∏–µ –ø–æ—Å—Ç–∞");
    match client
        .create_post(
            "–ú–æ–π –ø–µ—Ä–≤—ã–π gRPC –ø–æ—Å—Ç".to_string(),
            "–≠—Ç–æ —Ç–µ—Å—Ç–æ–≤—ã–π –ø–æ—Å—Ç, —Å–æ–∑–¥–∞–Ω–Ω—ã–π —á–µ—Ä–µ–∑ gRPC –∫–ª–∏–µ–Ω—Ç".to_string(),
        )
        .await
    {
        Ok(post) => {
            println!("   ‚úÖ –ü–æ—Å—Ç —Å–æ–∑–¥–∞–Ω —É—Å–ø–µ—à–Ω–æ!");
            println!("   üìä ID: {}", post.id);
            println!("   üìå –ó–∞–≥–æ–ª–æ–≤–æ–∫: {}", post.title);
            println!("   üìÑ –°–æ–¥–µ—Ä–∂–∞–Ω–∏–µ: {}", post.content);
            println!("   üë§ –ê–≤—Ç–æ—Ä ID: {}", post.author_id);
            println!("   üìÖ –°–æ–∑–¥–∞–Ω: {}", post.created_at);

            // –°–æ—Ö—Ä–∞–Ω—è–µ–º ID –ø–æ—Å—Ç–∞ –¥–ª—è —Å–ª–µ–¥—É—é—â–∏—Ö —Ç–µ—Å—Ç–æ–≤
            let post_id = post.id;
            println!("");

            // –¢–µ—Å—Ç 4: –ü–æ–ª—É—á–µ–Ω–∏–µ –ø–æ—Å—Ç–∞ –ø–æ ID
            println!("üîç –¢–µ—Å—Ç 4: –ü–æ–ª—É—á–µ–Ω–∏–µ –ø–æ—Å—Ç–∞ #{}", post_id);
            match client.get_post(post_id).await {
                Ok(post) => {
                    println!("   ‚úÖ –ü–æ—Å—Ç –ø–æ–ª—É—á–µ–Ω!");
                    println!("   üìå –ó–∞–≥–æ–ª–æ–≤–æ–∫: {}", post.title);
                    println!("   üìÑ –°–æ–¥–µ—Ä–∂–∞–Ω–∏–µ: {}", post.content);
                }
                Err(e) => println!("   ‚ùå –û—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è –ø–æ—Å—Ç–∞: {}", e),
            }
            println!("");

            // –¢–µ—Å—Ç 5: –û–±–Ω–æ–≤–ª–µ–Ω–∏–µ –ø–æ—Å—Ç–∞
            println!("‚úèÔ∏è –¢–µ—Å—Ç 5: –û–±–Ω–æ–≤–ª–µ–Ω–∏–µ –ø–æ—Å—Ç–∞ #{}", post_id);
            match client
                .update_post(
                    post_id,
                    Some("–û–±–Ω–æ–≤–ª–µ–Ω–Ω—ã–π –∑–∞–≥–æ–ª–æ–≤–æ–∫".to_string()),
                    Some("–≠—Ç–æ –æ–±–Ω–æ–≤–ª–µ–Ω–Ω–æ–µ —Å–æ–¥–µ—Ä–∂–∞–Ω–∏–µ –ø–æ—Å—Ç–∞".to_string()),
                )
                .await
            {
                Ok(post) => {
                    println!("   ‚úÖ –ü–æ—Å—Ç –æ–±–Ω–æ–≤–ª–µ–Ω!");
                    println!("   üìå –ù–æ–≤—ã–π –∑–∞–≥–æ–ª–æ–≤–æ–∫: {}", post.title);
                    println!("   üìÑ –ù–æ–≤–æ–µ —Å–æ–¥–µ—Ä–∂–∞–Ω–∏–µ: {}", post.content);
                }
                Err(e) => println!("   ‚ùå –û—à–∏–±–∫–∞ –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è –ø–æ—Å—Ç–∞: {}", e),
            }
            println!("");

            // –¢–µ—Å—Ç 6: –°–ø–∏—Å–æ–∫ –ø–æ—Å—Ç–æ–≤
            println!("üìã –¢–µ—Å—Ç 6: –°–ø–∏—Å–æ–∫ –ø–æ—Å—Ç–æ–≤");
            match client.list_posts(Some(10), Some(0)).await {
                Ok(response) => {
                    println!("   ‚úÖ –í—Å–µ–≥–æ –ø–æ—Å—Ç–æ–≤: {}", response.total);
                    println!("   üìä –ü–æ–∫–∞–∑–∞–Ω–æ: {}", response.posts.len());
                    for (i, post) in response.posts.iter().enumerate() {
                        println!("   {}. [{}] {}", i + 1, post.id, post.title);
                    }
                }
                Err(e) => println!("   ‚ùå –û—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è —Å–ø–∏—Å–∫–∞: {}", e),
            }
            println!("");

            // –¢–µ—Å—Ç 7: –£–¥–∞–ª–µ–Ω–∏–µ –ø–æ—Å—Ç–∞
            println!("üóëÔ∏è –¢–µ—Å—Ç 7: –£–¥–∞–ª–µ–Ω–∏–µ –ø–æ—Å—Ç–∞ #{}", post_id);
            match client.delete_post(post_id).await {
                Ok(()) => println!("   ‚úÖ –ü–æ—Å—Ç —É—Å–ø–µ—à–Ω–æ —É–¥–∞–ª–µ–Ω!"),
                Err(e) => println!("   ‚ùå –û—à–∏–±–∫–∞ —É–¥–∞–ª–µ–Ω–∏—è –ø–æ—Å—Ç–∞: {}", e),
            }
        }
        Err(e) => println!("   ‚ùå –û—à–∏–±–∫–∞ —Å–æ–∑–¥–∞–Ω–∏—è –ø–æ—Å—Ç–∞: {}", e),
    }
    println!("");

    // –¢–µ—Å—Ç 8: –ü—Ä–æ–≤–µ—Ä–∫–∞ —Ç–æ–∫–µ–Ω–∞
    println!("üîê –¢–µ—Å—Ç 8: –ü—Ä–æ–≤–µ—Ä–∫–∞ —Ç–æ–∫–µ–Ω–∞");
    match client.get_token().await {
        Some(token) => println!("   ‚úÖ –¢–æ–∫–µ–Ω –≤ –∫–ª–∏–µ–Ω—Ç–µ: {}...", &token[..20]),
        None => println!("   ‚ùå –¢–æ–∫–µ–Ω –Ω–µ –Ω–∞–π–¥–µ–Ω"),
    }

    println!("\n‚úÖ –í—Å–µ —Ç–µ—Å—Ç—ã –∑–∞–≤–µ—Ä—à–µ–Ω—ã!");
    Ok(())
}
