use blog_client::{BlogClient, Transport};
use std::time::Duration;
use tokio::time::sleep;

async fn test_registration() -> Result<String, String> {
    println!("üìù –¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ —Ä–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏–∏...");

    let client = BlogClient::new(Transport::Grpc("http://localhost:50051".to_string()))
        .await
        .map_err(|e| format!("Failed to create client: {}", e))?;

    let timestamp = std::time::SystemTime::now()
        .duration_since(std::time::UNIX_EPOCH)
        .unwrap()
        .as_secs();

    let username = format!("test_{}", timestamp);
    let email = format!("test_{}@example.com", timestamp);

    let response = client.register(
        username.clone(),
        email.clone(),
        "password123".to_string(),
        "Test User".to_string(),
    ).await.map_err(|e| format!("Registration failed: {}", e))?;

    assert_eq!(response.user.username, username);
    assert_eq!(response.user.email, email);

    Ok(format!("‚úì –†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è: user_id={}", response.user.id))
}

async fn test_login() -> Result<String, String> {
    println!("üîë –¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ –ª–æ–≥–∏–Ω–∞...");

    let client = BlogClient::new(Transport::Grpc("http://localhost:50051".to_string()))
        .await
        .map_err(|e| format!("Failed to create client: {}", e))?;

    let timestamp = std::time::SystemTime::now()
        .duration_since(std::time::UNIX_EPOCH)
        .unwrap()
        .as_secs();

    let username = format!("login_test_{}", timestamp);
    let password = "testpass123";

    // –°–Ω–∞—á–∞–ª–∞ —Ä–µ–≥–∏—Å—Ç—Ä–∏—Ä—É–µ–º –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
    let _ = client.register(
        username.clone(),
        format!("{}@example.com", username),
        password.to_string(),
        "Login Test User".to_string(),
    ).await.map_err(|e| format!("Pre-registration failed: {}", e))?;

    // –¢–µ–ø–µ—Ä—å –ª–æ–≥–∏–Ω–∏–º—Å—è
    let response = client.login(username, password.to_string())
        .await
        .map_err(|e| format!("Login failed: {}", e))?;

    assert!(!response.token.is_empty());

    Ok(format!("‚úì –õ–æ–≥–∏–Ω: token –ø–æ–ª—É—á–µ–Ω ({} chars)", response.token.len()))
}

async fn test_crud_operations() -> Result<String, String> {
    println!("üìö –¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ CRUD –æ–ø–µ—Ä–∞—Ü–∏–π...");

    let client = BlogClient::new(Transport::Grpc("http://localhost:50051".to_string()))
        .await
        .map_err(|e| format!("Failed to create client: {}", e))?;

    let timestamp = std::time::SystemTime::now()
        .duration_since(std::time::UNIX_EPOCH)
        .unwrap()
        .as_secs();

    let username = format!("crud_test_{}", timestamp);
    let password = "crudpass123";

    // –†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è
    let _ = client.register(
        username.clone(),
        format!("{}@example.com", username),
        password.to_string(),
        "CRUD Test User".to_string(),
    ).await.map_err(|e| format!("Registration failed: {}", e))?;

    // –õ–æ–≥–∏–Ω
    let login_resp = client.login(username, password.to_string())
        .await
        .map_err(|e| format!("Login failed: {}", e))?;

    client.set_token(login_resp.token.clone()).await;

    // Create
    let post = client.create_post(
        "Test Post".to_string(),
        "Test Content".to_string(),
    ).await.map_err(|e| format!("Create failed: {}", e))?;
    println!("   üìå –°–æ–∑–¥–∞–Ω –ø–æ—Å—Ç ID: {}", post.id);

    // Read
    let retrieved = client.get_post(post.id)
        .await
        .map_err(|e| format!("Get failed: {}", e))?;
    assert_eq!(retrieved.id, post.id);
    println!("   üìñ –ü–æ—Å—Ç –ø–æ–ª—É—á–µ–Ω: {}", retrieved.title);

    // Update
    let updated = client.update_post(
        post.id,
        Some("Updated Title".to_string()),
        Some("Updated Content".to_string()),
    ).await.map_err(|e| format!("Update failed: {}", e))?;
    assert_eq!(updated.title, "Updated Title");
    println!("   ‚úèÔ∏è –ü–æ—Å—Ç –æ–±–Ω–æ–≤–ª–µ–Ω: {}", updated.title);

    // Delete
    client.delete_post(post.id)
        .await
        .map_err(|e| format!("Delete failed: {}", e))?;
    println!("   üóëÔ∏è –ü–æ—Å—Ç —É–¥–∞–ª–µ–Ω");

    // Verify deletion
    let result = client.get_post(post.id).await;
    assert!(result.is_err());
    println!("   ‚úÖ –ü–æ—Å—Ç –Ω–µ –Ω–∞–π–¥–µ–Ω (–æ–∂–∏–¥–∞–µ–º–æ)");

    Ok("‚úì CRUD: –≤—Å–µ –æ–ø–µ—Ä–∞—Ü–∏–∏ –≤—ã–ø–æ–ª–Ω–µ–Ω—ã —É—Å–ø–µ—à–Ω–æ".to_string())
}

async fn test_pagination() -> Result<String, String> {
    println!("üìÑ –¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ –ø–∞–≥–∏–Ω–∞—Ü–∏–∏...");

    let client = BlogClient::new(Transport::Grpc("http://localhost:50051".to_string()))
        .await
        .map_err(|e| format!("Failed to create client: {}", e))?;

    let timestamp = std::time::SystemTime::now()
        .duration_since(std::time::UNIX_EPOCH)
        .unwrap()
        .as_secs();

    let username = format!("pagination_test_{}", timestamp);
    let password = "paginate123";

    // –†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è
    let _ = client.register(
        username.clone(),
        format!("{}@example.com", username),
        password.to_string(),
        "Pagination Test User".to_string(),
    ).await.map_err(|e| format!("Registration failed: {}", e))?;

    // –õ–æ–≥–∏–Ω
    let login_resp = client.login(username, password.to_string())
        .await
        .map_err(|e| format!("Login failed: {}", e))?;

    client.set_token(login_resp.token.clone()).await;

    // –°–æ–∑–¥–∞–µ–º –Ω–µ—Å–∫–æ–ª—å–∫–æ –ø–æ—Å—Ç–æ–≤
    println!("   –°–æ–∑–¥–∞–Ω–∏–µ 5 —Ç–µ—Å—Ç–æ–≤—ã—Ö –ø–æ—Å—Ç–æ–≤...");
    for i in 1..=5 {
        client.create_post(
            format!("Post {}", i),
            format!("Content {}", i),
        ).await.map_err(|e| format!("Failed to create post {}: {}", i, e))?;
    }

    // –¢–µ—Å—Ç–∏—Ä—É–µ–º –ø–∞–≥–∏–Ω–∞—Ü–∏—é
    let page1 = client.list_posts(Some(2), Some(0)).await
        .map_err(|e| format!("Failed to list page1: {}", e))?;
    assert_eq!(page1.posts.len(), 2);
    println!("   –°—Ç—Ä–∞–Ω–∏—Ü–∞ 1: {} –ø–æ—Å—Ç–æ–≤", page1.posts.len());

    let page2 = client.list_posts(Some(2), Some(2)).await
        .map_err(|e| format!("Failed to list page2: {}", e))?;
    assert_eq!(page2.posts.len(), 2);
    println!("   –°—Ç—Ä–∞–Ω–∏—Ü–∞ 2: {} –ø–æ—Å—Ç–æ–≤", page2.posts.len());

    let page3 = client.list_posts(Some(2), Some(4)).await
        .map_err(|e| format!("Failed to list page3: {}", e))?;
    assert_eq!(page3.posts.len(), 1);
    println!("   –°—Ç—Ä–∞–Ω–∏—Ü–∞ 3: {} –ø–æ—Å—Ç–æ–≤", page3.posts.len());

    println!("   –í—Å–µ–≥–æ –ø–æ—Å—Ç–æ–≤: {}", page1.total);

    Ok(format!("‚úì –ü–∞–≥–∏–Ω–∞—Ü–∏—è: –≤—Å–µ–≥–æ {} –ø–æ—Å—Ç–æ–≤", page1.total))
}

#[tokio::main]
async fn main() -> Result<(), Box<dyn std::error::Error>> {
    println!("üöÄ –ó–∞–ø—É—Å–∫ —Ç–µ—Å—Ç–æ–≤ gRPC –∫–ª–∏–µ–Ω—Ç–∞");
    println!("===============================\n");

    let mut passed = 0;
    let total = 4;

    // –¢–µ—Å—Ç 1: –†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è
    print!("üîÑ –†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è... ");
    match test_registration().await {
        Ok(result) => {
            println!("‚úÖ");
            println!("   {}\n", result);
            passed += 1;
        }
        Err(e) => println!("‚ùå\n   –û—à–∏–±–∫–∞: {}\n", e),
    }
    sleep(Duration::from_millis(500)).await;

    // –¢–µ—Å—Ç 2: –õ–æ–≥–∏–Ω
    print!("üîÑ –õ–æ–≥–∏–Ω... ");
    match test_login().await {
        Ok(result) => {
            println!("‚úÖ");
            println!("   {}\n", result);
            passed += 1;
        }
        Err(e) => println!("‚ùå\n   –û—à–∏–±–∫–∞: {}\n", e),
    }
    sleep(Duration::from_millis(500)).await;

    // –¢–µ—Å—Ç 3: CRUD –æ–ø–µ—Ä–∞—Ü–∏–∏
    print!("üîÑ CRUD –æ–ø–µ—Ä–∞—Ü–∏–∏... ");
    match test_crud_operations().await {
        Ok(result) => {
            println!("‚úÖ");
            println!("   {}\n", result);
            passed += 1;
        }
        Err(e) => println!("‚ùå\n   –û—à–∏–±–∫–∞: {}\n", e),
    }
    sleep(Duration::from_millis(500)).await;

    // –¢–µ—Å—Ç 4: –ü–∞–≥–∏–Ω–∞—Ü–∏—è
    print!("üîÑ –ü–∞–≥–∏–Ω–∞—Ü–∏—è... ");
    match test_pagination().await {
        Ok(result) => {
            println!("‚úÖ");
            println!("   {}\n", result);
            passed += 1;
        }
        Err(e) => println!("‚ùå\n   –û—à–∏–±–∫–∞: {}\n", e),
    }

    println!("===============================");
    println!("üìä –†–µ–∑—É–ª—å—Ç–∞—Ç—ã: {}/{} —Ç–µ—Å—Ç–æ–≤ –ø—Ä–æ–π–¥–µ–Ω–æ", passed, total);

    if passed == total {
        println!("‚úÖ –í—Å–µ —Ç–µ—Å—Ç—ã —É—Å–ø–µ—à–Ω–æ –ø—Ä–æ–π–¥–µ–Ω—ã!");
    } else {
        println!("‚ùå –ù–µ–∫–æ—Ç–æ—Ä—ã–µ —Ç–µ—Å—Ç—ã –Ω–µ –ø—Ä–æ–π–¥–µ–Ω—ã");
    }

    Ok(())
}